--- a/train/named-entity-recognition/named-entity-recognition.ipynb
+++ b/train/named-entity-recognition/named-entity-recognition.ipynb
@@ -650,7 +650,7 @@
         "  batch_size=16,\n",
         "  collate_fn=data_collator,\n",
         ")\n",
-        "validation_dataset=tokenize_indonlu_dataset[\"validation\"].to_tf_dataset(\n",
+        "tf_validation_dataset=tokenize_indonlu_dataset[\"validation\"].to_tf_dataset(\n",
         "  columns=['attention_mask','input_ids', 'labels','tokens'],\n",
         "  shuffle=False,\n",
         "  batch_size=16,\n",
@@ -1035,6 +1035,38 @@
         "            commit_message=f\"Training in progress epoch {epoch}\", blocking=False\n",
         "        )"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from transformers import create_optimizer\n",
+        "import tensorflow as tf\n",
+        "\n",
+        "tf.keras.mixed_precision.set_global_policy(\"mixed_float16\")\n",
+        "num_train_epochs=3\n",
+        "num_train_steps = len(tf_train_dataset) * num_train_epochs\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from transformers.keras_callbacks import PushToHubCallback\n",
+        "callback=PushToHubCallback(output_dir=\"bert-indonesia-finetuned-ner\", tokenizer=tokenizer)\n",
+        "model.fit(tf_train_dataset,validation_dataset=tf_eval callbacks=[callback], epochs=num_train_epochs)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
