--- a/train/named-entity-recognition/named-entity-recognition.ipynb
+++ b/train/named-entity-recognition/named-entity-recognition.ipynb
@@ -1037,6 +1037,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Training Using Tensorflow"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
@@ -1046,8 +1053,15 @@
         "import tensorflow as tf\n",
         "\n",
         "tf.keras.mixed_precision.set_global_policy(\"mixed_float16\")\n",
-        "num_train_epochs=3\n",
-        "num_train_steps = len(tf_train_dataset) * num_train_epochs\n"
+        "num_train_epochs=5\n",
+        "num_train_steps = len(tf_train_dataset) * num_train_epochs\n",
+        "optimizer, schedule = create_optimizer(\n",
+        "    init_lr=2e-5,\n",
+        "    num_warmup_steps=0,\n",
+        "    num_train_steps=num_train_steps,\n",
+        "    weight_decay_rate=0.01,\n",
+        ")\n",
+        "model.compile(optimizer=optimizer)"
       ]
     },
     {
@@ -1058,15 +1072,8 @@
       "source": [
         "from transformers.keras_callbacks import PushToHubCallback\n",
         "callback=PushToHubCallback(output_dir=\"bert-indonesia-finetuned-ner\", tokenizer=tokenizer)\n",
-        "model.fit(tf_train_dataset,validation_dataset=tf_eval callbacks=[callback], epochs=num_train_epochs)"
+        "model.fit(tf_train_dataset,validation_dataset=tf_validation_dataset, callbacks=[callback], epochs=num_train_epochs)"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
