--- a/train/named-entity-recognition/named-entity-recognition.ipynb
+++ b/train/named-entity-recognition/named-entity-recognition.ipynb
@@ -479,27 +479,25 @@
       },
       "outputs": [],
       "source": [
-        "label_all_tokens=True\n",
-        "def tokenize_and_aligning_labels(examples):\n",
-        "  tokenize_input=tokenizer(examples[\"tokens\"],truncation=True,is_split_into_words=True)\n",
-        "  labels=[]\n",
-        "  all_labels=examples[\"ner_tags\"]\n",
-        "\n",
-        "  for i,label in enumerate(all_labels):\n",
-        "    word_id=tokenize_input.word_id(batch_index=1)\n",
-        "    previous_word_index=None\n",
-        "    label_id=[]\n",
-        "    for word_index in word_id:\n",
-        "      if word_index is None:\n",
-        "        label_id.append(-100)\n",
-        "      elif word_index!=previous_word_index:\n",
-        "        label_id.append(label[word_index])\n",
+        "def aligning_labels_with_token(labels, word_id):\n",
+        "  new_labels=[]\n",
+        "  current_word=None\n",
+        "  for word in word_id:\n",
+        "    current_word=word_id\n",
+        "    if word != current_word:\n",
+        "      if word_id is None:\n",
+        "        label=-100\n",
         "      else:\n",
-        "        label_id.append(label[word_index]  if label_all_tokens else -100)\n",
-        "      previous_word_index=word_index             \n",
-        "    labels.append(label_id)\n",
-        "  tokenize_input[\"labels\"]=labels\n",
-        "  return tokenize_input"
+        "        labels[word_id]\n",
+        "      new_labels.append(label)\n",
+        "    elif word is None:\n",
+        "      new_labels.append(-100)\n",
+        "    else:\n",
+        "      label=labels[word]\n",
+        "      if label %2==1:\n",
+        "        label+=1\n",
+        "      new_labels.append(label)\n",
+        "  return new_labels"
       ]
     },
     {
@@ -536,15 +534,33 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "lm0hKibT7r2S"
-      },
+      "metadata": {},
       "outputs": [],
       "source": [
-        "tokenize_indonlu_dataset=indonlu_dataset.map(tokenize_and_align_labels,batched=True)\n",
-        "tokenize_indonlu_dataset = torch.tensor([int(f.label) for f in features], dtype=torch.long)\n",
-        "#tokenize_indonlu_dataset=indonlu_dataset.map(lambda examples:print(len(examples['labels'],end=',')))\n",
-        "#torch_train_dataset[\"label\"] = torch_train_dataset[\"label\"].apply(lambda x: list(map(int, x)))"
+        "inputs=tokenizer(indonlu_dataset[\"train\"][0][\"tokens\"], is_split_into_words=True)\n",
+        "labels=indonlu_dataset[\"train\"][0][\"ner_tags\"]\n",
+        "word_ids=inputs[\"input_ids\"]"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def tokenizing_and_labeling(examples):\n",
+        "  tokenized_input=tokenizer(examples[\"tokens\"],truncation=True, is_split_into_words=True)\n",
+        "  all_label=examples[\"ner_tags\"]\n",
+        "  new_labels=[]"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "tokenized_dataset=tokenized_indonlu_dataset"
       ]
     },
     {
@@ -555,9 +571,9 @@
       },
       "outputs": [],
       "source": [
-        "for i in range(len(tokenize_indonlu_dataset[\"train\"])):\n",
-        "  for j in range( len(tokenize_indonlu_dataset[\"train\"][i]['labels'] )):\n",
-        "    if isinstance(tokenize_indonlu_dataset[\"train\"][i]['labels'][j], str)==True:\n",
+        "for i in range(len(tokenized_dataset[\"train\"])):\n",
+        "  for j in range( len(tokenized_dataset[\"train\"][i]['labels'] )):\n",
+        "    if isinstance([\"train\"][i]['labels'][j], str)==True:\n",
         "      print(f\"found on %d %d\",i,j)"
       ]
     },
@@ -569,9 +585,9 @@
       },
       "outputs": [],
       "source": [
-        "for i in range(len(tokenize_indonlu_dataset[\"validation\"])):\n",
-        "  for j in range( len(tokenize_indonlu_dataset[\"validation\"][i]['labels'] )):\n",
-        "    if isinstance(tokenize_indonlu_dataset[\"validation\"][i]['labels'][j], str)==True:\n",
+        "for i in range(len(tokenized_dataset[\"validation\"])):\n",
+        "  for j in range( len(tokenized_dataset\"validation\"][i]['labels'] )):\n",
+        "    if isinstance(tokenized_dataset[\"validation\"][i]['labels'][j], str)==True:\n",
         "      print(f\"found on %d %d\",i,j)"
       ]
     },
@@ -583,9 +599,9 @@
       },
       "outputs": [],
       "source": [
-        "for i in range(len(tokenize_indonlu_dataset[\"test\"])):\n",
-        "  for j in range( len(tokenize_indonlu_dataset[\"test\"][i]['labels'] )):\n",
-        "    if isinstance(tokenize_indonlu_dataset[\"test\"][i]['labels'][j], str)==True:\n",
+        "for i in range(len(tokenized_dataset[\"test\"])):\n",
+        "  for j in range( len(tokenized_dataset[\"test\"][i]['labels'] )):\n",
+        "    if isinstance(tokenized_dataset[\"test\"][i]['labels'][j], str)==True:\n",
         "      print(f\"found on %d %d\",i,j)"
       ]
     },
@@ -625,15 +641,6 @@
       ],
       "source": [
         "tokenize_indonlu_dataset[\"train\"]"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "7kTZqml0fXSQ"
-      },
-      "source": [
-        "# Prepare dataset for Tensorflow"
       ]
     },
     {
@@ -1034,6 +1041,15 @@
         "        repo.push_to_hub(\n",
         "            commit_message=f\"Training in progress epoch {epoch}\", blocking=False\n",
         "        )"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7kTZqml0fXSQ"
+      },
+      "source": [
+        "# Prepare dataset for Tensorflow"
       ]
     },
     {
