--- a/train/named-entity-recognition/named-entity-recognition.ipynb
+++ b/train/named-entity-recognition/named-entity-recognition.ipynb
@@ -323,7 +323,8 @@
       "source": [
         "inputs=tokenizer(indonlu_dataset[\"train\"][0][\"tokens\"], is_split_into_words=True)\n",
         "labels=indonlu_dataset[\"train\"][0][\"ner_tags\"]\n",
-        "word_ids=inputs[\"input_ids\"]"
+        "word_ids=inputs[\"input_ids\"]\n",
+        "word_id_test=inputs.word_ids(0)"
       ]
     },
     {
@@ -337,7 +338,20 @@
         "def tokenizing_and_labeling(examples):\n",
         "  tokenized_input=tokenizer(examples[\"tokens\"],truncation=True, is_split_into_words=True)\n",
         "  all_label=examples[\"ner_tags\"]\n",
-        "  new_labels=[]"
+        "  new_labels=[]\n",
+        "  for i,labels in enumerate(all_label):\n",
+        "    new_labels.append(aligning_labels_with_token(labels,tokenized_input.word_ids[i]))\n",
+        "  tokenized_inputs[\"labels\"]=new_labels\n",
+        "  return tokenized_inputs"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "tokenized_indonlu_dataset=indonlu_dataset.map(tokenizing_and_labeling,batched=True,remove_columns=indonlu_dataset[\"train\"].columnn_names,)"
       ]
     },
     {
