adding local_ner notebook

--- a/train/dialog-gpt-based/dialog-gpt-based.ipynb
+++ b/train/dialog-gpt-based/dialog-gpt-based.ipynb
@@ -17,7 +17,37 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from transformers import GPT2Tokenizer, TFGPT2Model\n",
+    "tokenizer = GPT2Tokenizer.from_pretrained('gpt2')\n",
+    "model = TFGPT2Model.from_pretrained('gpt2')\n",
+    "text = \"Replace me by any text you'd like.\"\n",
+    "encoded_input = tokenizer(text, return_tensors='tf')\n",
+    "output = model(encoded_input)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from transformers import AutoModelWithLMHead, AutoTokenizer\n",
+    "import torch\n",
+    "\n",
+    "tokenizer = AutoTokenizer.from_pretrained(\"microsoft/DialoGPT-small\")\n",
+    "model = AutoModelWithLMHead.from_pretrained(\"microsoft/DialoGPT-small\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datasets import load_dataset\n",
+    "blended_skill_dataset = load_dataset(\"blended_skill_talk\")"
+   ]
   }
  ],
  "metadata": {
