delete preprocessing ner dataset

--- a/export to pdf/to_pdf.ipynb
+++ b/export to pdf/to_pdf.ipynb
@@ -1,6 +1,26 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Instal Depedencies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install pandas\n",
+    "!pip install json\n",
+    "!pip install os_sys\n",
+    "!pip install jinja2\n",
+    "!pip install weasyprint"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -112,15 +132,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# !pip install jinja2"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [],
@@ -150,15 +161,6 @@
    "outputs": [],
    "source": [
     "html_out = template.render(template_vars)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# !pip install weasyprint"
    ]
   },
   {
