--- a/train/named-entity-recognition/named-entity-recognition.ipynb
+++ b/train/named-entity-recognition/named-entity-recognition.ipynb
@@ -217,6 +217,16 @@
     {
       "cell_type": "code",
       "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from datasets import load_dataset\n",
+        "conll2033_dataset = load_dataset(\"conll2033\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "tNIfm4dU8fvC"
       },
@@ -436,28 +446,6 @@
         "labels=indonlu_dataset[\"train\"][0][\"ner_tags\"]\n",
         "word_ids=inputs[\"input_ids\"]\n",
         "word_id_test=inputs.word_ids(0)\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "4-e1kLuh_OVZ"
-      },
-      "outputs": [],
-      "source": [
-        "word_ids"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "mdACNF5e_QAK"
-      },
-      "outputs": [],
-      "source": [
-        "word_id_test"
       ]
     },
     {
