working on processing dataset

--- a/train/dialog-gpt-based/dialog-gpt-based.ipynb
+++ b/train/dialog-gpt-based/dialog-gpt-based.ipynb
@@ -75,13 +75,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from datasets import *\n",
+    "def process_token_list(token_list):\n",
+    "    token_list[0]=token_list[0].capitalize()\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "total_dialogues=[]\n",
     "for i, free_message in enumerate(tqdm(free_messages_total)):\n",
     "    free_messages_list=[utterance.strip() for utterance in free_message if len(utterance.strip())>0]\n",
     "    guided_messages_list=[utterance.strip() for utterance in guided_messages_total[i] if len(utterance.strip())>0]\n",
     "    dialogue=previous_utterance_total[i]\n",
     "    \n",
-    "    for j in range(len(free_messages_list)):"
+    "    for j in range(len(free_messages_list)):\n",
+    "        token_list=process_token_list(tokenizer.tokenize(free_messages_list[j]))\n",
+    "        text=tokenizer.convert_token_to_string(token_list)\n",
+    "        total_dialogues.append(text)\n",
+    "\n",
+    "        if j<len(guided_messages_list):\n",
+    "            token_list=process_token_list(tokenizer.tokenize(guided_messages_list[j]))\n",
+    "            text=tokenizer.convert_token_to_string(token_list)\n",
+    "            total_dialogues.append(text)\n",
+    "    total_dialogues.append(dialogue)"
    ]
   },
   {
