adding process token list

--- a/train/dialog-gpt-based/dialog-gpt-based.ipynb
+++ b/train/dialog-gpt-based/dialog-gpt-based.ipynb
@@ -78,7 +78,9 @@
     "from datasets import *\n",
     "def process_token_list(token_list):\n",
     "    token_list[0]=token_list[0].capitalize()\n",
-    "    "
+    "    quote_content=0\n",
+    "    for i in token in enumerate(token_list):\n",
+    "        if space in token:"
    ]
   },
   {
@@ -102,7 +104,8 @@
     "            token_list=process_token_list(tokenizer.tokenize(guided_messages_list[j]))\n",
     "            text=tokenizer.convert_token_to_string(token_list)\n",
     "            total_dialogues.append(text)\n",
-    "    total_dialogues.append(dialogue)"
+    "    total_dialogues.append(dialogue)\n",
+    "    "
    ]
   },
   {
@@ -122,7 +125,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.sumary()"
+    "model.summary()"
    ]
   }
  ],
