--- a/train/named-entity-recognition/named-entity-recognition.ipynb
+++ b/train/named-entity-recognition/named-entity-recognition.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/C22-PS008/machine-learning/blob/main/train/named-entity-recognition/named-entity-recognition.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -170,27 +170,19 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "A6WENdBRflCY"
-      },
+      "metadata": {},
       "outputs": [],
       "source": [
-        "from transformers import AutoTokenizer , TFAutoModelForTokenClassification\n",
-        "\n",
-        "tokenizer = AutoTokenizer.from_pretrained(\"chanifrusydi/bert-finetuned-ner\",from_tf=True)\n",
-        "model"
+        "base_model=\"bert-base-cased\""
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "eXVSudY0beXj"
-      },
+      "metadata": {},
       "outputs": [],
       "source": [
-        "model = TFAutoModelForTokenClassification(\"chanifrusydi/bert-finetuned-ner\")\n",
-        "# model.bert.load_state_dict(model.bert.state_dict())"
+        "base_model=\"bert-base-multilingual-cased\""
       ]
     },
     {
@@ -201,7 +193,20 @@
       },
       "outputs": [],
       "source": [
-        "indobenchmark/indobert-base-p1"
+        "base_model=\"indobenchmark/indobert-base-p1\""
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "A6WENdBRflCY"
+      },
+      "outputs": [],
+      "source": [
+        "from transformers import AutoTokenizer , TFAutoModelForTokenClassification\n",
+        "\n",
+        "tokenizer = AutoTokenizer.from_pretrained(base_model)"
       ]
     },
     {
@@ -751,10 +756,10 @@
   ],
   "metadata": {
     "colab": {
+      "include_colab_link": true,
       "name": "named-entity-recognition.ipynb",
       "provenance": [],
-      "toc_visible": true,
-      "include_colab_link": true
+      "toc_visible": true
     },
     "kernelspec": {
       "display_name": "Python 3",
