add push to hub function

--- a/train/dialog-gpt-based/dialog_gpt_based.ipynb
+++ b/train/dialog-gpt-based/dialog_gpt_based.ipynb
@@ -349,86 +349,7 @@
         "id": "QTwD_Cfdftj4",
         "outputId": "56e06e30-b12f-4891-ffd7-eaf0cf6e87a6"
       },
-      "outputs": [
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "7f2212e0de874a63a1b6fddf6bd42324",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "Downloading:   0%|          | 0.00/26.0 [00:00<?, ?B/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "4d7e06c5f7754ed28375cea64d56d1bf",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "Downloading:   0%|          | 0.00/641 [00:00<?, ?B/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "2409f1e3eafa41198862607b3718e1eb",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "Downloading:   0%|          | 0.00/0.99M [00:00<?, ?B/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "d8f188d4fe264d4a8edc5889df1a56cd",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "Downloading:   0%|          | 0.00/446k [00:00<?, ?B/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.7/dist-packages/transformers/models/auto/modeling_auto.py:925: FutureWarning: The class `AutoModelWithLMHead` is deprecated and will be removed in a future version. Please use `AutoModelForCausalLM` for causal language models, `AutoModelForMaskedLM` for masked language models and `AutoModelForSeq2SeqLM` for encoder-decoder models.\n",
-            "  FutureWarning,\n"
-          ]
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "e7cbe616c05e4d16aa24a6aec542eecc",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "Downloading:   0%|          | 0.00/335M [00:00<?, ?B/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        }
-      ],
+      "outputs": [],
       "source": [
         "from transformers import AutoModelWithLMHead, AutoTokenizer\n",
         "\n",
@@ -749,88 +670,7 @@
         "id": "FBbVkaiHpcDW",
         "outputId": "f48e2bc8-fabf-473e-c357-8b7f0dcdd74a"
       },
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "100%|██████████| 6808/6808 [00:17<00:00, 392.51it/s]\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "##################################################Analysis on train##################################################\n",
-            "The number of train dialogues: 70642\n",
-            "The number of valid dialogues: 12467\n",
-            "The number of train utterances: 4384260\n",
-            "The number of valid utterances: 800754\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "100%|██████████| 6808/6808 [00:13<00:00, 497.81it/s]\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "##################################################Analysis on validation##################################################\n",
-            "The number of train dialogues: 70642\n",
-            "The number of valid dialogues: 12467\n",
-            "The number of train utterances: 4384260\n",
-            "The number of valid utterances: 800754\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "100%|██████████| 6808/6808 [00:13<00:00, 503.40it/s]\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "##################################################Analysis on test##################################################\n",
-            "The number of train dialogues: 70642\n",
-            "The number of valid dialogues: 12467\n",
-            "The number of train utterances: 4384260\n",
-            "The number of valid utterances: 800754\n",
-            "Saving train data...\n",
-            "Saving train text file...\n",
-            "Saving train idx file...\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "100%|██████████| 211926/211926 [40:22<00:00, 87.49it/s]\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Saving validation data...\n",
-            "Saving valid text file...\n",
-            "Saving valid idx file...\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "  3%|▎         | 1075/37401 [00:24<13:42, 44.19it/s]"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "train_fac = 0.85\n",
         "\n",
@@ -839,6 +679,62 @@
         "save_data('train', dir, train_dialogues, tokenizer)\n",
         "print(\"Saving validation data...\")\n",
         "save_data('valid', dir, valid_dialogues, tokenizer)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from transformers import TrainingArguments\n",
+        "\n",
+        "training_args = TrainingArguments(output_dir=\"test_trainer\",push_to_hub=True,push_to_hub=True,)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import numpy as np\n",
+        "from datasets import load_metric\n",
+        "\n",
+        "metric = load_metric(\"accuracy\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "trainer = Trainer(\n",
+        "    model=model,\n",
+        "    args=training_args,\n",
+        "    train_dataset=train_dialogues,\n",
+        "    eval_dataset=valid_dialogues,\n",
+        "    metric=metric,\n",
+        ")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "trainer.train()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "trainer.push_to_hub()"
       ]
     }
   ],
