adding distillbert base model

--- a/train/named-entity-recognition/named-entity-recognition.ipynb
+++ b/train/named-entity-recognition/named-entity-recognition.ipynb
@@ -204,7 +204,7 @@
       },
       "outputs": [],
       "source": [
-        "from transformers import AutoTokenizer , TFAutoModelForTokenClassification\n",
+        "from transformers import AutoTokenizer \n",
         "\n",
         "tokenizer = AutoTokenizer.from_pretrained(base_model)"
       ]
